fix: spacing of the paragraphs

--- a/src/pages/WorkInProgress/WorkInProgress.scss
+++ b/src/pages/WorkInProgress/WorkInProgress.scss
@@ -5,8 +5,17 @@
   justify-content: space-between;
 
   &-content {
+    width: 90%;
     margin-top: 50px;
-    justify-content: space-evenly;
     height: 100%;
+    justify-content: center;
+    text-align: center;
+
+    font-size: 20px;
+
+    &-paragraphs {
+      height: 30%;
+      justify-content: space-evenly;
+    }
   }
 }
